[package]
name = "brahmaputra_rust_client"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
futures = "0.3.30"
tokio = { version = "1.6.0", features = ["full"] }
tokio-stream = "0.1.11"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
chrono = { version = "0.4.34", features = [] }
dashmap = "6.0.1"
lazy_static = "1.4.0"
bytebuffer = "2.1.1"
etcd-client = "0.14.0"
rust_decimal = "1.28.1"
regex = "1.10.4"
actix-web = "4.3.0"
actix-cors = "0.7.0"
reqwest = "0.12.7"
tikv-client = "0.3.0"
bytes = "1.6.0"
actix-web-lab = "0.22.0"
base64 = "0.22.1"
libc = "0.2.155"
clap = { version = "4.5.16", features = ["derive"] }
serde_yml = "0.0.11"
crossbeam = "0.8.4"
[dependencies.tokio-util]
version = "0.7.4"
features = ["compat"]

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]